--- a/HCGroupKennis/MainWindow.xaml
+++ b/HCGroupKennis/MainWindow.xaml
@@ -5,8 +5,54 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:HCGroupKennis"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="HC Group Kennis Applicatie" MinHeight="400" Height="600" MinWidth="600" Width="1000" Background="#262537">
     <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="3*"/>
+        </Grid.ColumnDefinitions>
 
+        <Grid Column="0">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="5*"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+
+            <Grid Grid.Row="1">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
+
+                <StackPanel Grid.Row="0" Orientation="Vertical" VerticalAlignment="Center">
+                    <Label Content="Hoofdgroep" Foreground="White" HorizontalContentAlignment="Center"/>
+                    <ComboBox Name="MainGroupComboBox" ItemsSource="{Binding MainGroups}" SelectedItem="{Binding SelectedMainGroup}" SelectedIndex="0" VerticalAlignment="Center" MaxWidth="300"/>
+                </StackPanel>
+                <StackPanel Grid.Row="1" Orientation="Vertical" VerticalAlignment="Center">
+                    <Label Content="Subgroep" Foreground="White" HorizontalContentAlignment="Center"/>
+                    <ComboBox Name="SubGroupComboBox" ItemsSource="{Binding SubGroups}" SelectedItem="{Binding SubMainGroup}" SelectedIndex="0" VerticalAlignment="Center" MaxWidth="300"/>
+                </StackPanel>
+            </Grid>
+        </Grid>
+
+        <DataGrid Grid.Column="1" Name="CvDataGrid" RowBackground="DarkSlateGray" Foreground="White" Background="Transparent" FontFamily="Consolas" FontSize="13" AutoGenerateColumns="False">
+            <DataGrid.Resources>
+                <Style BasedOn="{StaticResource {x:Type DataGridColumnHeader}}" TargetType="{x:Type DataGridColumnHeader}">
+                    <Setter Property="Background" Value="DarkSlateGray"/>
+                    <Setter Property="Height" Value="25"/>
+                    <Setter Property="BorderBrush" Value="Black"/>
+                    <Setter Property="BorderThickness" Value="0,0,1,0"/>
+                    <Setter Property="HorizontalContentAlignment" Value="Center"/>
+                </Style>
+            </DataGrid.Resources>
+            <DataGrid.Columns>
+                <DataGridTextColumn Binding="{Binding Name}" IsReadOnly="True" Header="Naam" Width="*"/>
+                <DataGridTextColumn Binding="{Binding MainGroup}" Header="Hoofdgroep" Width="*"/>
+                <DataGridTextColumn Binding="{Binding SubGroup}" Header="Subgroep" Width="*"/>
+                <DataGridTextColumn Binding="{Binding Year}" Header="Jaar" Width="*"/>
+                <DataGridTextColumn Binding="{Binding Rating}" Header="Rating" Width="0.5*"/>
+            </DataGrid.Columns>
+        </DataGrid>
     </Grid>
 </Window>
