--- a/HCGroupKennis/MainWindow.xaml
+++ b/HCGroupKennis/MainWindow.xaml
@@ -27,16 +27,16 @@
 
                 <StackPanel Grid.Row="0" Orientation="Vertical" VerticalAlignment="Center">
                     <Label Content="Hoofdgroep" Foreground="White" HorizontalContentAlignment="Center"/>
-                    <ComboBox Name="MainGroupComboBox" ItemsSource="{Binding MainGroups}" SelectedItem="{Binding SelectedMainGroup}" SelectedIndex="0" VerticalAlignment="Center" MaxWidth="300"/>
+                    <ComboBox Name="MainGroupComboBox" ItemsSource="{Binding MainGroups}" SelectedItem="{Binding SelectedMainGroup}" SelectedIndex="0" SelectionChanged="GroupsFilter_OnSelectionChanged" VerticalAlignment="Center" MaxWidth="300"/>
                 </StackPanel>
                 <StackPanel Grid.Row="1" Orientation="Vertical" VerticalAlignment="Center">
                     <Label Content="Subgroep" Foreground="White" HorizontalContentAlignment="Center"/>
-                    <ComboBox Name="SubGroupComboBox" ItemsSource="{Binding SubGroups}" SelectedItem="{Binding SubMainGroup}" SelectedIndex="0" VerticalAlignment="Center" MaxWidth="300"/>
+                    <ComboBox Name="SubGroupComboBox" ItemsSource="{Binding SubGroups}" SelectedItem="{Binding SelectedSubGroup}" SelectedIndex="0" SelectionChanged="GroupsFilter_OnSelectionChanged" VerticalAlignment="Center" MaxWidth="300"/>
                 </StackPanel>
             </Grid>
         </Grid>
 
-        <DataGrid Grid.Column="1" Name="CvDataGrid" RowBackground="DarkSlateGray" Foreground="White" Background="Transparent" FontFamily="Consolas" FontSize="13" AutoGenerateColumns="False">
+        <DataGrid Grid.Column="1" Name="CvDataGrid" ItemsSource="{Binding FilteredCvItems}" RowBackground="DarkSlateGray" Foreground="White" Background="Transparent" FontFamily="Consolas" FontSize="13" AutoGenerateColumns="False">
             <DataGrid.Resources>
                 <Style BasedOn="{StaticResource {x:Type DataGridColumnHeader}}" TargetType="{x:Type DataGridColumnHeader}">
                     <Setter Property="Background" Value="DarkSlateGray"/>
