--- a/HCGroupKennis/MainWindow.xaml
+++ b/HCGroupKennis/MainWindow.xaml
@@ -38,7 +38,7 @@
                 </StackPanel>
                 <StackPanel Grid.Row="2" Orientation="Vertical" VerticalAlignment="Center">
                     <Label Content="Filter op jaar" Foreground="White" HorizontalContentAlignment="Center"/>
-                    <TextBox Grid.Row="2" Name="YearTextBox" PreviewTextInput="YearTextBox_PreviewTextInput" PreviewKeyDown="YearTextBox_PreviewKeyDown" TextChanged="YearFilter_OnTextChanged" MaxLength="4" VerticalAlignment="Center" Width="150"/>
+                    <TextBox Grid.Row="2" Name="YearTextBox" PreviewTextInput="YearTextBox_PreviewTextInput" PreviewKeyDown="YearTextBox_PreviewKeyDown" TextChanged="YearFilter_OnTextChanged" CommandManager.PreviewCanExecute="HandleCanExecute" MaxLength="4" VerticalAlignment="Center" Width="150"/>
                 </StackPanel>
             </Grid>
         </Grid>
